data/derived/comb/progs/unify/prog3494.ml.out
Characters 58-59:
  if n > 0 then clone (x::acc) (n - 1) else [];;
                       ^
Error: This expression has type 'a list
       but an expression was expected of type 'a
       The type variable 'a occurs inside 'a list
